# MergeDistMats

./: README.md
binaries/OSX/: mergeDistMats
docs/: mergeDistMatsDoc.aux  mergeDistMatsDoc.blg  mergeDistMatsDoc.tex
src/: mergeDistMat.cabal  mergeDistMats.hs
src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
testData/: Wheeler2012-2.csv
